pegasus/sites.v3/code.org/public/css/homepage.css
a.underscorehover:hover
{
  text-decoration: underline;
  color: white;
}

.underscorehover:hover
{
  text-decoration: underline;
  color: white;
}

a.nounderscorehover:hover
{
  text-decoration: none;
}

@media screen and (max-width: 512px)
{
  .same-height-column {width:100%}
}
@media screen and (min-width: 513px)
{
  .same-height-column {float:none !important; width:50%}
}

body.modal-open .supreme-container{
  -webkit-filter: blur(2px);
  -moz-filter: blur(2px);
  -o-filter: blur(2px);
  -ms-filter: blur(2px);
  filter: blur(2px);
}

@media screen and (min-width: 971px) {
  .homepage-caption-bottom {
    top: 190px;
  }
}

#homepage #hero {
  position: relative;
  width: 100%;
}

#homepage #hero .widehero {
  display: none;
  z-index: -5;
  position:absolute;
  left: 0;
  top: 0;
  background-repeat: no-repeat; background-size: cover;
  width: 100%;
  height: 100%;
}

#homepage #hero .widehero_do_not_hide {
  z-index: -5;
  position:absolute;
  left: 0;
  top: 0;
  background-repeat: no-repeat; background-size: cover;
  width: 100%;
  height: 100%;
}

#hero #fullwidth0.widehero {
  animation: fadein 4s;
  display: block;
}

@keyframes fadein {
  from { opacity: 0; }
  to   { opacity: 1; }
}

#homepage #hero #fullwidth {
  width: 100%;
}

#homepage #caption_container {
  color: white;
  font-size: 20px;
}

#homepage #caption_container .captionarea {
  position: absolute;
  left: 0;
  text-align: center;
  width: 100%;
  color: #fff;
  line-height: 22px;
}

#homepage #caption_container .caption {
  display: none;
  position: absolute;
  opacity: 0;
  padding: 8px;
  text-shadow: 0 0 5px black;
}

#homepage #caption_container .smallcaption {
  font-size: 14px;
}

#homepage #caption_container #blankspaceleftdesktop {
  height: 380px;
}

#homepage #caption_container #blankspaceleftmobile {
  height: 100px;
}

#homepage #actions {
  position: relative;
  padding: 20px;
  padding-bottom: 60px; /* hoc2018 special */
  text-align: left;     /* hoc2018 special */
}

@media screen and (max-width: 970px) {
  #homepage #hero {
    overflow: visible;
  }
  #homepage .hoc2018 #hero-message-gap {
    margin-top: 300px;
  }
}

#homepage .bigannounce {
  padding: 20px;
  text-align: center;
}

@media screen and (min-width: 971px)  {
  #homepage .bigannounce {
    padding-top: 100px;
  }
}

#homepage .bigannounce-hoc2018 {
  padding: 20px;
  text-align: center;
}

@media screen and (min-width: 971px)  {
  #homepage .bigannounce-hoc2018 {
    padding-top: 20px;
  }
}

#homepage .bigannounce-hoc2018.desktop-feature {
  width: 60%;
  float: left;
  color: white;
}

#homepage .bigannounce2-hoc2018.mobile-feature {
  color: white;
}

#homepage .action.hoc2018 {
  float: left;
  margin-right: 20px;
}

#homepage .action.hoc2018 .herohocbutton {
  min-width: 230px;
  margin-right: 0px;
}

#homepage .action.hoc2018 #hero-video {
  min-width: 230px;
  background-color: transparent;
  border: none;
}

#homepage .action.hoc2018 #hero-video #playtext {
  font-size: 18px;
   pointer-events: none;
}

#homepage .action .video-play-icon {
  width: 24px;
  height: 24px;
  margin-top: -4px;
  margin-right: 4px;
}

.hoc2018 .hero-message-line1 {
  font-size: 24px;
  line-height: 24px;
  padding-bottom: 3px;
}

.hoc2018 .hero-message-line2 {
  font-family: 'Gotham 5r', sans-serif;
  font-size: 40px;
  line-height: 40px;
  padding-bottom: 40px;
}

.hoc2018 .hoc2018-highlight-word {
  color: rgb(0,173,188);
}

.hoc2018 .hero-message-gap {
  height: 140px;
}

.hoc2018 .hero-message-line3 {
  font-size: 15px;
  font-family: 'Gotham 4r', sans-serif;
  padding-bottom: 3px;
}

.hoc2018 .hero_video_link {
  cursor: pointer;
  color: white;
  text-decoration: underline;
}

.hoc2018-curriculum-banner {
  width: 100%;
  background-color: rgb(118,101,160);;
  text-align: center;
  color: white;
  padding: 14px;
  font-size: 15px;
}

.hoc2018-curriculum-link {
  color: white !important;
  font-family: 'Gotham 4r', sans-serif !important;
  text-decoration: underline !important;
}

#homepage .hoc2018 #blackbox {
  position: absolute;
  top: 0;
  left: 0;
  width: 60%;
  height: 100%;
  background-color: black;
  z-index: -1;
  -webkit-transform: translate3d(0,0,0);
}

#homepage .hoc2018 #blacktriangle {
  position: absolute;
  top: 0;
  left: 50%;
  width: 20%;
  height: 100%;
  z-index: -1;
}

#homepage .hoc2018 #blackbox_mobile {
  position: absolute;
  top: 60%;
  left: 0;
  width: 100%;
  height: 40%;
  background-color: black;
  z-index: -1;
}

#homepage .hoc2018 #blacktriangle_mobile {
  position: absolute;
  top: 50%;
  left: 0;
  height: 20%;
  width: 100%;
  z-index: -1;
}

#homepage .hoc2018 #blacktrianglesvg {
  width: 100%;
  height: 100%;
}

#homepage #actions a {
  text-decoration: none;
}

#homepage #actions #title {
  font-family: 'Gotham 5r', sans-serif;
  font-size: 26px;
  color: white;
  line-height: 30px;
}

#homepage #actions #subtitle {
  font-family: 'Gotham 4r', sans-serif;
  font-size: 16px;
  color: white;
  margin: 15px 0 5px 0;
}

#homepage #actions #playimage {
  cursor: pointer;
}

#homepage #actions #playtext {
  font-size: 20px;
  cursor: pointer;
}

#homepage #actions #herolearnlink {
  color: white;
  font-size: 20px
}

#homepage #actions #herolearnbutton {
  font-weight: 500;
  font-size: 20px;
  height: 50px
}

#homepage #actions .buttongroup {
  display: inline-block;
  margin-bottom: 20px;
}

#homepage #actions .herohocbutton {
  font-weight: 500;
  font-size: 18px;
  height: 40px;
  padding: 0 30px;
  margin: 10px 5px 0 0;
}

#homepage #actions .herohocbutton-solid-white {
  color: black;
  background-color: white;
  border-color: white;
}

#homepage #actions .herohocbutton-hollow-white {
  background-color: initial;
  border-color: white;
}

#homepage #actions #volunteeraction {
  font-family: 'Gotham 4r', sans-serif;
  font-size: 16px;
  color: white;
  margin-top: 30px;
}

#homepage #actions #volunteeraction a {
  font-family: 'Gotham 4r', sans-serif;
  font-size: 16px;
  color: white;
  text-decoration: none;
}

#homepage #actions #petitionaction {
  display: none;
  font-weight: 500;
  font-size: 14px;
  height: 50px;
  cursor: pointer
}

#homepage .quarterslot {
  float: left;
  height: 250px;
  padding: 0px 5px 10px 5px;
}

#homepage .quarterslot .slotbox {
  position: relative;
  overflow: hidden;
  background-repeat: no-repeat;
  background-size: cover;
  width: 100%;
  height: 100%;
  background-position: 50%;
  height: 220px;
  border-radius: 5px;
}

#homepage .quarterslot .slotbox .headerbox {
  position: absolute;
  bottom: 0px;
  left: 0px;
  color: white;
  width: 100%;
  padding: 10px;
  font-size: 18px;
  text-align: left;
  font-family: 'Gotham 4r', sans-serif;
  text-align: center;
}

#homepage .quarterslot .slotbox .headerbox .header {
  font-family: 'Gotham 7r', sans-serif
}

#homepage .quarterslot .slotbox .headerbox .sentence {
  font-size: 14px;
  opacity: 0.9
}

#homepage .quarterslot-links {
  float: left;
}

#homepage .quarterslot-links-small {
  height: 390px;
  padding: 0px 5px 10px 5px;
}

#homepage .quarterslot-links-large {
  padding: 30px;
}

#homepage .quarterslot-links .slotbox {
  position: relative;
  overflow: hidden;
  background-repeat: no-repeat;
  background-size: cover;
  width: 100%;
  height: 100%;
  background-position: 0% 50%;
  height: 220px;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

#homepage .quarterslot-links .headerbox {
  position: absolute;
  bottom: 0px;
  left: 0px;
  color: white;
  width: 100%;
  padding: 10px;
  font-size: 18px;
  text-align: left;
  font-family: 'Gotham 4r', sans-serif;
  text-align: center
}

#homepage .quarterslot-links .headerbox .header {
  font-family: 'Gotham 7r', sans-serif;
}

#homepage .quarterslot-links .headerbox .sentence {
  font-size: 14px;
  opacity: 0.9
}

#homepage .quarterslot-links .thelinks {
  padding: 5px;
  padding-top: 20px;
  border-bottom-right-radius: 5px;
  border-bottom-left-radius: 5px;
}

#homepage .quarterslot-links .thelinks .linkentry {
  margin-bottom: 20px
}

#homepage .quarterslot-links .thelinks .link {
  font-size: 16px;
  font-family: 'Gotham 4r', sans-serif;
  color: white;
}

#homepage #gallerycolumn {
  width: 100%;
  margin-bottom: 20px;
  margin-top: 40px;
  clear: both;
  overflow: hidden;
  border: 5px solid white
}

#homepage #gallerycolumn .headingbox {
  left: 0px;
  color: white;
  width: 100%;
  padding: 10px;
  font-size: 20px;
  text-align: left;
  font-family: 'Gotham 5r', sans-serif;
  text-align: center;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

#homepage #gallerycolumn .thelinks {
  padding: 10px;
  height: 0;
}

/* Pad height-auto div before images load.
   Since the .col-50 layout changes by media query,
   we need to calculate padding twice to match. */

@media screen and (min-width: 971px) {
  /* height/width == 120 / (750 * 2) */
  #homepage #gallerycolumn .thelinks {
    padding-bottom: 8%;
  }
}

@media screen and (min-width: 0px) and (max-width: 970px) {
  /* height/width == (120 * 2) / 750 */
  #homepage #gallerycolumn .thelinks {
    padding-bottom: 32%;
  }
}

#homepage #gallerycolumn .thelinks img {
  height: auto;
}

#homepage #threedivs iframe {
  -ms-zoom: 1.3;
  -moz-transform: scale(1.3);
  -moz-transform-origin: 0 0;
  -o-transform: scale(1.3);
  -o-transform-origin: 0 0;
  -webkit-transform: scale(1.3);
  -webkit-transform-origin: 0 0;
}

#homepage #threedivs .fb-like > span {
  height: 27px !important;
}

.grey_input {
  background-color: rgb(226,228,227);
  color: rgb(82, 82, 82);
  border: 1px solid rgb(146,147,148);
}

.dropdown {
  background-color: rgb(226,228,227);
  color: rgb(82, 82, 82);
  border: 1px solid rgb(146,147,148);
}

.stats-box {
  padding: 50px 20px 20px 20px;
}

.make-difference {
  font-weight: 900;
  color: rgb(0, 173, 188);
  font-size: 20px;
  text-align: center;
  margin-top: 20px;
  text-transform: uppercase;
}

.statistics a .stats-number {
  text-align: center;
  color: rgb(77, 87, 95);
  font-family: 'Gotham 4r', sans-serif;
  font-weight: 900;
}

.statistics a .stats-phrase {
  font-size: 14px;
  text-align: center;
  padding-top: 25px;
  color: rgb(77, 87, 95);
  font-family: 'Gotham 4r', sans-serif;
}

.statistics a .stats-number:hover {
  color: rgb(0,173,188);
}

.below_hero_announcement {
  text-align: center;
  padding: 10px;
}

